manifests/hdfs-dn-statefulset.yaml
# A headless service to create DNS records
apiVersion: v1
kind: Service
metadata:
  name: hdfs-dn
  namespace: yarn-cluster
  labels:
    component: hdfs-dn
spec:
  ports:
  - name: dfs
    port: 9000
    protocol: TCP
  # *.hdfs-dn.yarn-cluster.svc.cluster.local
  clusterIP: None
  selector:
    component: hdfs-dn
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: hdfs-dn
spec:
  serviceName: "hdfs-dn"
  replicas: 3
  template:
    metadata:
      labels:
        component: hdfs-dn
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: hdfs-dn
        image: sz-pg-oam-docker-hub-001.tendcloud.com/library/danisla-hadoop:2.7.2
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory: "1024Mi"
            cpu: "100m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        volumeMounts:
          - name: hadoop-config
            mountPath: /tmp/hadoop-config
      volumes:
        - name: hadoop-config
          configMap:
            name: hadoop-config
