manifests/hdfs-nn-statefulset.yaml
# A headless service to create DNS records
apiVersion: v1
kind: Service
metadata:
  name: hdfs-nn
  namespace: yarn-cluster
  labels:
    component: hdfs-nn
spec:
  ports:
  - name: dfs
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: web
    port: 50070
    targetPort: 50070
  # *.hdfs-nn.yarn-cluster.svc.cluster.local
  selector:
    component: hdfs-nn
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: hdfs-nn
spec:
  serviceName: "hdfs-nn"
  replicas: 1
  template:
    metadata:
      labels:
        component: hdfs-nn
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: hdfs-nn
        image: sz-pg-oam-docker-hub-001.tendcloud.com/library/danisla-hadoop:2.7.2
        ports:
        - containerPort: 50070
          name: web
        - containerPort: 9000
          name: dfs
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory: "1024Mi"
            cpu: "100m"
          limits:
            memory: "2048Mi"
            cpu: "1000m"
        volumeMounts:
          - name: hadoop-config
            mountPath: /tmp/hadoop-config
      volumes:
        - name: hadoop-config
          configMap:
            name: hadoop-config
