manifests/yarn-nm-statefulset.yaml
# A headless service to create DNS records
apiVersion: v1
kind: Service
metadata:
  name: yarn-nm
  namespace: yarn-cluster
  labels:
    component: yarn-nm
spec:
  ports:
  - port: 8088
    name: web
  - port: 8082
    name: web2
  - port: 4040
    name: proxy
  # *.yarn-nm.yarn-cluster.svc.cluster.local
  clusterIP: None
  selector:
    component: yarn-nm
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: yarn-nm
spec:
  serviceName: "yarn-nm"
  replicas: 3
  template:
    metadata:
      labels:
        component: yarn-nm
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: yarn-nm
        image: bj-xg-oam-docker-hub-001.tendcloud.com/library/hadoop-2.6.0-cdh5.5.2:v1
        ports:
        - containerPort: 8088
          name: web
        command:
           - "/bin/bash"
           - "/tmp/hadoop-config/bootstrap.sh"
           - "-d"
        resources:
          requests:
            memory: "1024Mi"
            cpu: "1000m"
          limits:
            memory: "10240Mi"
            cpu: "5000m"
        volumeMounts:
          - name: hadoop-config
            mountPath: /tmp/hadoop-config
      volumes:
        - name: hadoop-config
          configMap:
            name: hadoop-config
